<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- EDM GENERAL -->
    <string name="app_name">Excuse de merde</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer ouvert</string>
    <string name="drawer_closed">Drawer fermé</string>
    <string name="ac_refresh">Refresh</string>

    <!-- EDM ALERT DIALOG PARAMETRES MES EDMS -->
    <string name="title_alert_dialog_retour_accueil">Information</string>
    <string name="button_valid_retour_accueil">Retourner à l\'accueil</string>
    <string name="message_aucunes_edms_utilisateur">Vous n\'avez pas d\'EDMs.</string>
    <string name="message_pas_connecte_voir_edms">Vous devez être connécté pour voir vos EDMs.</string>

    <!-- EDM ALERT DIALOG EDM FRAGMENT ACTIVITY CONNECTE POUR POSTER EDM -->
    <string name="title_alert_dialog_retour_to_post_edm">Attention</string>
    <string name="button_connect_me">Me connecter !</string>
    <string name="message_pas_connecte">Vous devez être connecté pour pouvoir poster des EDMs.</string>

    <!-- EDM MES EDMS -->
    <string name="app_name_mes_edms">Mes EDMs</string>

    <!-- EDM CLASSEMENT TOP TEN DES MYTHOS -->
    <string name="app_name_top_ten_des_mythos">Top 10 des mythos</string>

    <!-- EDM PROGRESS BAR -->
    <string name="chargement_en_cours">Chargement en cours</string>
    <string name="merci_de_patienter">Merci de patienter</string>

    <!-- EDM AUTHENTICATION -->
    <string name="app_name_authentication">Authentification</string>

    <!-- EDM ACCUEIL -->
    <string name="app_name_accueil">Accueil</string>

    <!-- EDM POSTER EDM -->
    <string name="app_name_poster_edm">Poster une EDM</string>
    <string name="poster_edm_bt">Poster une EDM</string>
    <string name="text_edm_to_post">Votre EDM se tape ici ...</string>
    <string name="text_edm_posted_with_succes">Votre EDM a été postée avec succès</string>
    <string name="text_btn_valider_edm">Je valide cette EDM</string>

    <!-- EDM ACCOUNT -->
    <string name="lieu_residence_user">Lieu de résidence :</string>
    <string name="civilite_user">Civilité :</string>
    <string name="date_naissance_user">Date de naissance :</string>
    <string name="visite_du_profil_user">Visite(s) du profil :</string>
    <string name="nb_commentaire_user">Commentaires :</string>
    <string name="nb_edms_user">Nombre de EDMs :</string>
    <string name="ma_photo">Ma photo :</string>
    <string name="non_renseigne">Aucun(e)</string>
    <string name="editer_profil">Editer mon profil</string>
    <string name="user_photo">user photo</string>

    <!-- EDM ROI DES MYTHOS -->
    <string name="app_name_roi_des_mythos">Roi des mythos</string>
    <string name="afficher_profil_roi_des_mythos">Afficher le profil</string>
    <string name="user_ne_souhaite_pas_partager_son_profil">Cet utilisateur n\'a pas souhaité partager les informations le concernant.</string>
    <string name="profil_user_hidden">Profil utlisateur caché</string>

    <!-- EDM EDIT ACCOUNT -->
    <string name="app_name_edition_profil">Edition profil</string>
    <string name="edit_civilite_user">Civilite</string>
    <string name="edit_date_de_naissance_user">Date de naissance</string>
    <string name="edit_ville_user">Résidence</string>
    <string name="edit_statut_user">Statut</string>
    <string name="edit_pays_user">Pays</string>
    <string name="edit_fuseau_user">user photo</string>
    <string name="edit_a_propos_user">A propos</string>
    <string name="edit_changer_photo_user">Avatar</string>
    <string name="edit_cacher_profil_user">Cacher Profil</string>
    <string name="valider_edition_edm">Valider</string>
    <string name="profil_mis_a_jour">Votre profil a correctement été mis à jour</string>

    <!-- EDM MENU DRAWER -->
    <string name="app_name_account">Mon Compte</string>
    <string name="drawer_menu_item_accueil">Accueil</string>
    <string name="drawer_menu_item_Forum">Forum</string>
    <string name="drawer_menu_item_Boutique">Boutique</string>
    <string name="drawer_menu_item_mon_compte">Mon compte</string>
    <string name="drawer_menu_item_pipotek">Pipotek</string>
    <string name="drawer_menu_item_parametres">Paramètres</string>

    <!-- EDM GENERAL -->


    <!-- EDM LOGIN -->
    <string name="pseudo_edm">Pseudo</string>
    <string name="password_edm">Mot de passe</string>
    <string name="remind_me_edm">Se souvenir de moi</string>
    <string name="connexion_edm">Connexion</string>

    <!-- EDM PARAMETRES -->
    <string name="app_name_parameters">Plus</string>
    <string name="mon_compte">MON COMPTE</string>
    <string name="forum">FORUM</string>
    <string name="boutique">BOUTIQUE</string>
    <string name="luminosite">LUMINOSITE</string>
    <string name="deconnexion">DECONNEXION</string>

    <!-- QUITTER EDM -->

    <string name="warning">Attention</string>
    <string name="quitt_edm_application">Souhaitez-vous vraiment quitter EDM ?</string>

</resources>