<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llt_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="0dp"
    android:background="@color/edm_blue_dark_background"
    android:orientation="vertical"
    android:scrollbars="none" >
   <ScrollView
        android:layout_width="match_parent"
           android:layout_height="330dp"
        android:layout_marginTop="20dp"
        
        android:fillViewport="true" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@color/edm_blue_dark_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/llt_civilite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_civilite"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/edit_civilite_user"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/edm_grey_solid"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_date_de_naissance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/et_user_date_de_naissance"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:ems="10"
                android:enabled="true"
                android:gravity="center"
                android:hint="@string/edit_date_de_naissance_user"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:maxLines="1"
                android:minHeight="32dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/edm_grey_solid"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_ville"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_ville"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/edit_ville_user"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/edm_grey_solid"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_statut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_statut"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/edit_statut_user"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/edm_grey_solid"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_pays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_pays"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/edit_pays_user"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/edm_grey_solid"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_a_propos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_a_propos"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/edit_a_propos_user"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/edm_grey_solid"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
    <Button
        android:id="@+id/bt_user_editer_profil"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#F09F38"
        android:hint="@string/valider_edition_edm"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingLeft="6dip"
        android:text="@string/editer_profil"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>