<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/edm_blue_dark_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="120dp"
        android:background="@color/edm_blue_dark_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/llt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_gravity="center"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_login"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/pseudo_edm"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingLeft="6dip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_mdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_user_mdp"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/password_edm"
                android:inputType="textPassword"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llt_remind_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/edm_blue_background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_residence"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/edm_blue_dark_background"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/remind_me_edm"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingLeft="6dip"
                android:text="@string/remind_me_edm"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blanc"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_remind_me"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/tv_residence"
                android:background="@color/edm_blue_dark_background"
                android:ems="10"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_user_connexion"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#F09F38"
            android:hint="@string/connexion_edm"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="6dip"
            android:text="@string/connexion_edm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>